--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,6 +2,7 @@ on: [push]
 
 jobs:
   build:
+    environment: sandbox
     env:
       TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
     runs-on: ubuntu-20.04
