--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      - run: echo $TWINE_PASSWORD
+      - run: echo $TWINE_PASSWORD | base64
       - run: echo test
